monitor cpu and ram

--- a/templates/telegraf.j2
+++ b/templates/telegraf.j2
@@ -45,13 +45,13 @@
     sample_interval = "2s"
 
   [[inputs.gnmi.subscription]]
-    name = "interface"
+    name = "cpu"
     subscription_mode = "sample"
     path = "/components/component/cpu"
     sample_interval = "2s"
 
   [[inputs.gnmi.subscription]]
-    name = "interface"
+    name = "memory"
     subscription_mode = "sample"
     path = "/components/component/state/memory"
     sample_interval = "2s"
