review telegraf.j2 template

--- a/templates/telegraf.j2
+++ b/templates/telegraf.j2
@@ -67,6 +67,10 @@
 #   files = ["stdout"]
 
 [[processors.rename]]
+  namepass = ["interface"]
   [[processors.rename.replace]]
     tag="host"
     dest="device"
+  [[processors.rename.replace]]
+    tag="name"
+    dest="interface_name"
